@@ -40,8 +40,14 @@
 #define HAVE_STDINT_H 1
 #define HAVE_STRING_H 1
 
-#ifdef __ppc__
+#ifdef __ppc__ || __PPC__ || __powerpc__
+#define KJS_CPU_PPC 1
 #define WORDS_BIGENDIAN 1
+#elif __ppc64__ || __PPC64__
+#define KJS_CPU_PPC64 1
+#define WORDS_BIGENDIAN 1
+#elif __i386__
+#define KJS_CPU_X86 1
 #endif
 
 #define KXC_CHANGES 1
